--- a/practic/main.css
+++ b/practic/main.css
@@ -15,7 +15,7 @@ header{
     width: 100%;
  } 
 .container{
-   width: 1170px;
+   max-width: 1170px;
    margin:0 auto; 
     
 
@@ -631,3 +631,25 @@ footer{
     text-align: center;
 }
 
+@media(max-width:1170px){
+   .container{
+       max-width: 970px;
+   }
+   
+ 
+}
+
+@media(max-width:992px){
+   .container{    
+       max-width: 750px;
+   }
+ 
+}
+
+@media(max-width:767px){
+   .container{
+       max-width: none;
+       
+   }
+ 
+}
