--- a/docs/main.css
+++ b/docs/main.css
@@ -8,7 +8,7 @@ body{
 
 }
 .container{
-    width: 1170px; /*Ширина контейнера*/
+    max-width: 1170px; 
     /*height: 200px; /*Отступ сверху*/
     /* background-color: cadetblue;Фон */
     margin-left: auto;   /* Делаем наш контейнер по центру страницы*/
@@ -58,9 +58,13 @@ body{
 .about-me-text{
     width: 440px;
 }
-
 .about-me-photo{
-
+}
+.about-me-photo img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    min-height: 150px;
 }
 
 .about-me-heading-big{
@@ -136,6 +140,7 @@ body{
 .project-img{
     margin-bottom: 15px;
     display: block;
+    max-width: 100%;
 
 }
 .project-title{
@@ -297,24 +302,33 @@ body{
 }
   
 
- @media(max-width:320px){
+ @media(max-width:1170px){
     .container{
-        width: 100%;
+        max-width: 970px;
     }
-    .header{
-        width: 200px;
-        text-align: center;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-
-    .about-me{
-        width: 200px;
-        text-align: center;
-    }
-    .about-me-row{
-        display: inline-block;
-        width: 200px;
-    }
-
+    
+  
  }
+
+ @media(max-width:992px){
+    .container{    
+        max-width: 750px;
+        text-align: center;
+        margin: 0 auto;
+
+    }
+     
+  
+ }
+
+ @media(max-width:767px){
+    .container{
+        max-width: none;
+        text-align: center;
+        
+    }
+    .about-me-photo img{
+        
+    }
+ }
+
