deleted:    docs/project.html 	modified:   main.css 	deleted:    project.html 	modified:   rybalka/index.html 	modified:   rybalka/js/main.js

--- a/main.css
+++ b/main.css
@@ -331,8 +331,8 @@ body{
         text-align: center;
         
     }
-    .about-me-photo img{
-        
+    .footer-email{
+        font-size: 25px;
     }
  }
 
