--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ body{
 
 
 
-.heading-1{
+.heading{
     font-size: 50px; 
     line-height: 80px; 
     font-weight: 700; 
@@ -42,36 +42,52 @@ body{
     font-weight: 300;
     margin-bottom: 20px;
 }
-.social-link{
+.social__link{
     margin-right: 30px;
     text-decoration: none;
 }
+.social__row{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    align-items: center;
+    justify-content: flex-start;
+}
+
 
 .about-me{
     padding-top: 75px;
     padding-bottom: 25px;
     background-color: lightskyblue;
-    
-    
 }
 
-.about-me-row{
+.about-me__row{
     display: flex;
     justify-content: space-between;
 }
-.about-me-text{
+.about-me__text{
     width: 440px;
 }
-.about-me-photo{
+.about-me__text p {
+    font-weight: 300;
+    font-size: 28px;
+    line-height: 1.6;
 }
-.about-me-photo img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    min-height: 150px;
+.about-me__text ul {
+    font-weight: 300;
+    font-size: 28px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.about-me-heading-big{
+.about-me__photo img{
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.about-me__heading--big{
     font-size: 40px;
     font-weight: 700;
     margin-top: 0;
@@ -79,7 +95,7 @@ body{
 
 }
 
-.about-me-heading-small{
+.about-me__heading--small{
     font-size: 28px;
     font-weight: 700;
     margin-top: 0;
@@ -87,25 +103,8 @@ body{
 
 }
 
-.about-me-text p {
-    font-weight: 300;
-    font-size: 28px;
-    line-height: 1.6;
 
-}
-.about-me-text ul{
-    font-weight: 300;
-    font-size: 28px;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    
-}
-.about-me-text ul li{
-
-}
-
-.about-me-text ul li::before{
+.about-me__text ul li::before{
     content: "-";
 
 }
@@ -116,7 +115,7 @@ body{
     padding-bottom: 45px;
 
 }
-.prtfolio-title{
+.prtfolio__title{
     font-size: 40px;
     font-weight: 700;
     text-align: center;
@@ -125,7 +124,7 @@ body{
 
 }
 
-.portfolio-row{
+.portfolio__row{
     display: flex;
     flex-wrap: wrap; /*Флексы выстраиваются в несколько строк*/
     justify-content: space-between;
@@ -134,6 +133,7 @@ body{
 }
 
 .project{
+    width: 49%;
     margin-bottom: 130px;
     margin-left: 2px;
 }
@@ -141,31 +141,34 @@ body{
     margin-bottom: 0;
 }
 
-.project-img{
+.project__img{
     margin-bottom: 15px;
-    display: block;
-    max-width: 100%;
+    height: 400px;
+    overflow: hidden;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
-.project-img{
-    width: 577px;
-    height: 393px;
+.project__img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
 }
-    
-.project-title{
+
+.project__title{
     font-size: 30px;
     font-weight: 700;
     margin-bottom: 10px;
 
 }
 
-.project-description{
+.project__description{
     font-size: 25px;
     font-weight: 300;
     margin-top: 0;
     margin-bottom: 15px;
 }
 
-.project-link{
+.project__link{
     font-weight: 300;
     font-style: italic;
     font-size: 16px;
@@ -227,53 +230,6 @@ body{
     margin-bottom: 25px;
     text-align: center;
 }
-
-.badges-wrapper{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 35px;
-
-}
-.badge{
-    height: 26px;
-    line-height: 26px;
-    color: white;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: burlywood;
-    margin-right: 10px;
-    font-weight: 700;
-    font-size: 14px;
-}
-.badge-html{
-    background-color: #ff861a;
-}
-.badge-css{
-    background-color: #039be5;
-}
-    
-.badge-bootstrap{
-    background-color: #a062c7;
-}
-.project-page-discription{
-    width: 575px;
-    font-size: 22px;
-    line-height: 1.45;
-    font-weight: 300;
-    text-align: center;
-    margin: 0 auto;
-    margin-bottom: 50px;
-
-}
-.project-page-discription p{
-    margin-top: 0;
-    margin-bottom: 20px;
-}
-
-.project-page-discription a{
-    color: #039be5;
-}
-
 .project-page-img{
     text-align: center;
 }
@@ -282,33 +238,21 @@ body{
     margin-bottom: 55px;
 }
 
-.pagination{
-    display: flex;
-    justify-content: space-between;
-
-}
-.pagination-btn{
-    display: inline-block;
-    height: 80px;
-    width: calc(50% - 5px);
-    line-height: 80px;
-    border:1px solid #d2ebf7; /*Рамка, толщина, тип линии
-    цвет обводки*/
-    font-size: 22px;
-    font-weight: 300;
-    color: #47abe9;
-    text-align: center;
-    text-decoration: none;
-
-}  
+.footer__title {
+    font-size: 42px;
+    font-weight: 700;
+    margin-bottom: 25px;
+} 
 .footer-inner-page{
     text-align: center;
     margin-bottom: 80px;
 }
-.footer-email{
+.footer__email{
     display: flex;
+    font-size: 36px;
+    font-weight: 100;
 }
-.footer-email a{
+.footer__email a{
     text-decoration: none;
     font-weight: 600;
 }
@@ -340,8 +284,15 @@ body{
         margin: 0 auto;
 
     }
+    .social__row{
+        justify-content: center;
+    }
     .project{
+        width: 100%;
         margin-bottom: 55px;
+    }
+    .portfolio__row{
+        flex-direction: column;
     }
      
   
@@ -353,10 +304,13 @@ body{
         text-align: center;
         
     }
-    .about-me-row{
+    .about-me{
+        padding-top: 30px;
+    }
+    .about-me__row{
         justify-content: center;
     }
-    .about-me-photo{
+    .about-me__photo{
         display: none;
     }
     .footer-email{
@@ -374,7 +328,7 @@ body{
 
  @media (max-width:600px){
     .footer__link{
-        font-size: 14px;
+        font-size: 19px;
     }
  }
 
