--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 body{
-    margin: 0;
+    margin: 0 auto;
     font-family: 'Roboto', sans-serif;
     color: #101c35;
 
@@ -269,9 +269,6 @@ body{
 
  @media(max-width:1170px){
 
-     .body {
-        padding: 0 20px;
-     }
     .container{
         max-width: 970px;
         
