--- a/main.css
+++ b/main.css
@@ -284,7 +284,7 @@ a:link, a:visited {
     padding-bottom: 50px;
 }
 .project-page-heading{
-    font-size: 4opx;
+    font-size: 40px;
     font-weight: 700;
     margin: 0;
     margin-bottom: 25px;
