--- a/lumos22/css/main.css
+++ b/lumos22/css/main.css
@@ -340,6 +340,7 @@ body{
 .programm__inner{
     width: 70%;
     padding-left: 30px;
+    padding-right: 15px;
 
 }
 .programm__item{
@@ -1054,6 +1055,9 @@ body{
     }
 }
 @media (max-width:480px) {
+    .title{
+        font-size: 30px;
+    }
     .header__item{
         width: 75%;
         margin-right: 0;
