--- a/main.css
+++ b/main.css
@@ -523,7 +523,18 @@ a:link, a:visited {
         font-size: 19px;
     }
  }
-
+ @media (max-width:450px){
+    .container{
+        max-width: 320px;
+    }
+    .heading{
+        font-size: 35px;
+        line-height:50px;
+    }
+    .header{
+        position: absolute;
+    }
+ }
  @media (max-width:320px){
     .header__title{
         font-size: 37px;
